--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <base href="/">
     </head>
-    <body ng-app="app">
+    <body ng-app="app" ng-strict-di ng-cloak>
         <ui-view></ui-view>
     </body>
 </html>
